<resources>
    <string name="app_name">Arithmetic</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="random">random</string>
    <string name="menu_1">1</string>
    <string name="menu_2">2</string>
    <string name="menu_3">3</string>
    <string name="menu_4">4</string>
    <string name="menu_5">5</string>
    <string name="menu_6">6</string>
    <string name="menu_7">7</string>
    <string name="menu_8">8</string>
    <string name="menu_9">9</string>
    <string name="menu_review">review</string>
    <string name="menu_reset">reset</string>
    <string name="menu_op">+</string>
    <string name="menu_next_tbl">next table</string>
    <string name="menu_show_add_table">Add table</string>
    <string name="menu_show_num_picker">picker</string>
    <string name="title_activity_add_table">AddTableActivity</string>
    <string name="title_activity_number_select">NumberSelectActivity</string>
    <string name="title_activity_history_wrong">incorrect list</string>
    <string name="title_activity_history_display">incorrect list</string>
</resources>
