<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ArithmeticActivity">

    <group android:checkableBehavior="single">

    <item android:id="@+id/action_random" android:title="@string/random"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="true"/>

    <item android:id="@+id/action_1" android:title="@string/menu_1"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="false"/>

    <item android:id="@+id/action_2" android:title="@string/menu_2"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="false"/>

    <item android:id="@+id/action_3" android:title="@string/menu_3"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="false"/>

    <item android:id="@+id/action_4" android:title="@string/menu_4"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="false" />

    <item android:id="@+id/action_5" android:title="@string/menu_5"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="false"/>

    <item android:id="@+id/action_6" android:title="@string/menu_6"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="false"/>

    <item android:id="@+id/action_7" android:title="@string/menu_7"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="false"/>

    <item android:id="@+id/action_8" android:title="@string/menu_8"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="false"/>

    <item android:id="@+id/action_9" android:title="@string/menu_9"
        android:orderInCategory="100" app:showAsAction="never"
        android:checked="false"/>
    </group>

    <item android:id="@+id/action_reset" android:title="@string/menu_reset"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
